Wrapping contact section in div, modifying hr via css

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ excited to work with other artists to create new art.</p>
         <hr>
 
         <!-- Contact section -->
-          
+          <div>
               <section id="Contact">
                   <h2>Contact</h2>
                     <p>I'd love to hear from you! Please feel free to contact or follow me:</p>
@@ -100,6 +100,7 @@ excited to work with other artists to create new art.</p>
                           <li>Instagram</li>
                           <li>Pinterest</li>
                         </ol>
+          </div>  
     </main>
 
     <!-- Footer section -->
